--- a/recipes/style.css
+++ b/recipes/style.css
@@ -1,5 +1,5 @@
 * {
-    font-size: 30px;
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -9,4 +9,8 @@ img {
 
 h1 {
     font-size: 60px;
+}
+
+body {
+    margin: 50px;
 }
