--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -10,4 +10,8 @@ h1 {
 
 ul {
     list-style-type: none;
+}
+
+body {
+    margin: 50px;
 }
